# rules_conda

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  deps2.bzl  go.mod  go.sum  pyproject.toml
.github/: .golangci.yml  dependabot.yml  pull_request_template.md
.github/workflows/: deps.yml  golangci-lint.yml  test.yml
buildutil/: BUILD.bazel  common.go  repos.go  util.go
cmd/conda_pkg_install/: BUILD.bazel  main.go
cmd/generate_conda_package_repo/: BUILD.bazel  main.go
cmd/make_conda_spec/: BUILD.bazel  main.go  make_cmd_generic.go  make_cmd_linux.go  writer.go
conda/: BUILD.bazel  files.go  files_test.go  metadata.go  package_tarball.go  packages.go  packages_test.go  python_package.go
conda/testdata/: cpp_header  script_file
docs/: BUILD.bazel  conda_environment.md  conda_manifest.md  conda_package_lock.md  conda_package_repository.md  new_conda_package_http_repository.md
examples/: BUILD.bazel  blacken.py  eigen.cc  ssl.cc
licensing/: BUILD.bazel  generate_spdx.py  known_licenses.go  licenses.go  licenses_test.go  normalize_license.go  normalize_license_test.go  spdx.go
licensing/known/: BUILD.bazel
rules/: BUILD.bazel  conda_environment.bzl  conda_install_rules.bzl  conda_manifest.bzl  conda_package_lock.bzl  conda_package_repository.bzl  multiarch_http_file.bzl  new_conda_package_git_repository.bzl  new_conda_package_http_repository.bzl  providers.bzl  rules_bins_repository.bzl  symlink_provider.bzl
rules/private/: BUILD.bazel  new_conda_package_repository_utils.bzl
scripts/: BUILD.bazel  conda_package_lock_generator.bash.template  generate_repo_bins.bash
tools/: BUILD.bazel
