[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/10XGenomics/rules_conda"
repository = "https://github.com/10XGenomics/rules_conda"

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
src_paths = ["python"]

[tool.pyright]
exclude = [
    ".git/",
    ".github/",
    ".vscode/",
    "**/__pycache__",
    "bazel-*/",
]

[tool.ruff]
target-version = "py310"
line-length = 80
