load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_applicable_licenses = ["//licensing:license"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "repos.go",
        "util.go",
    ],
    importpath = "github.com/10XGenomics/rules_conda/buildutil",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_buildtools//build:go_default_library"],
)
