load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/10XGenomics/rules_conda/cmd/conda_pkg_install",
    visibility = ["//visibility:private"],
    deps = [
        "//conda:go_default_library",
        "//buildutil:go_default_library",
    ],
)

go_binary(
    name = "conda_pkg_install",
    embed = [":go_default_library"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    visibility = ["//visibility:public"],
)
